# romnibot

romni_arduino/romnibot/: ROmniBOT.ino  romnibot.ino
romni_arduino/romnibot/ROmniBOT/: ROmniBOT.ino
romni_arduino/romnibot/RomniEncoder/: RomniEncoder.cpp  RomniEncoder.h
romnibot/chefbot_description/: package.xml
romnibot/romni_bringup/: CMakeLists.txt  classifier.pkl  package.xml
romnibot/romni_bringup/launch/: #robot_standalone.launch#  .#robot_standalone.launch  3dsensor.launch  amcl_demo.launch  backup.launch  exploration.launch  exploration_demo.launch  gmapping.launch  gmapping_demo.launch  keyboard_teleop.launch  model_robot.launch  move_base.launch  robot_standalone.launch  test.launch  view_navigation.launch  view_robot.launch
romnibot/romni_bringup/map/: hotel1.yaml
romnibot/romni_bringup/param/: #board_config.yaml#  base_local_planner_params.yaml  board_config.yaml  costmap_common.yaml  dwa_local_planner_params.yaml  frames.gv  mux.yaml  serial.yaml
romnibot/romni_bringup/rviz/: navigation.rviz  robot.rviz
romnibot/romni_bringup/scripts/: #SerialDataGateway.py#  #diff_tf.py#  #launchpad_node.py#  #pid_velocity.py#  #twist_to_motors.py#  .#diff_tf.py  SerialDataGateway.py  calculate_distance.py  chefbot_teleop_key  detect_door.py  detect_doors.py  diff_tf.py  doorCoordinates.txt  launchpad_node.py  learning.py  (+3 more)
romnibot/romni_description/: CMakeLists.txt  package.xml
romnibot/romnibot_description/: CMakeLists.txt  package.xml
romnitelepresence/ClientSide/: ClientSide.pde
romnitelepresence/FitPcSide/: FitPcSide.pde
romnitelepresence/Omni_Arduino_Code/: Omni_Arduino_Code.ino
(+37 files in other folders)
